--- a/css/home.css
+++ b/css/home.css
@@ -655,6 +655,7 @@ body{
   background: #D2872A;
   box-shadow: 1px 2px 20px rgba(0, 0, 0, 0.1);
   border-radius: 16px;
+  border:#D2872A;
 }
 .gimg1{
   position: absolute;
@@ -693,6 +694,7 @@ body{
   background: #FFFFFF;
   box-shadow: 1px 2px 20px rgba(0, 0, 0, 0.1);
   border-radius: 16px;
+  border:#D2872A;
 }
 .gimg2{
   position: absolute;
@@ -731,6 +733,7 @@ body{
   background: #FFFFFF;
   box-shadow: 1px 2px 20px rgba(0, 0, 0, 0.1);
   border-radius: 16px;
+  border:#D2872A;
 }
 .gimg3{
   position: absolute;
