--- a/css/main/category.css
+++ b/css/main/category.css
@@ -271,6 +271,7 @@ body{
   height: 156px;
   left: 16px;
   top: 230px;
+  border:none;
 }
 .cate2{
   position: absolute;
@@ -278,6 +279,7 @@ body{
   height: 156px;
   left: 188px;
   top: 230px;
+  border:none;
 }
 .cate3{
   position: absolute;
@@ -285,6 +287,7 @@ body{
   height: 156px;
   left: 16px;
   top: 400px;
+  border:none;
 }
 .cate4{
   position: absolute;
@@ -292,6 +295,7 @@ body{
   height: 156px;
   left: 189px;
   top: 400px;
+  border:none;
 }
 .cate5{
   position: absolute;
@@ -299,4 +303,5 @@ body{
   height: 156px;
   left: 16px;
   top: 570px;
+  border:none;
 }
