--- a/css/main/grain.css
+++ b/css/main/grain.css
@@ -179,7 +179,7 @@
   position: absolute;
   width: 200px;
   height: 16px;
-  left: 0px;
+  left: 25px;
   top: 5px;
   font-family: Open Sans;
   font-style: normal;
@@ -315,6 +315,8 @@
   height: 16px;
   left: 144px;
   top: 3px;
+  border:none;
+  background: none;
   font-family: Open Sans;
   font-style: normal;
   font-weight: normal;
@@ -337,6 +339,8 @@
   height: 16px;
   left: 144px;
   top: 25px;
+  border:none;
+  background: none;
   font-family: Open Sans;
   font-style: normal;
   font-weight: bold;
@@ -373,6 +377,8 @@
   height: 16px;
   left: 144px;
   top: 50px;
+  border:none;
+  background:none;
   font-family: Open Sans;
   font-style: normal;
   font-weight: normal;
@@ -461,8 +467,8 @@
   position: absolute;
   width: 7px;
   height: 7px;
-  left: 4.5px;
-  top: -1px;
+  left: 2.5px;
+  top: -2px;
   font-family: Open Sans;
   font-style: normal;
   font-weight: normal;
@@ -479,6 +485,7 @@
   top: 790px;
   background: rgba(187, 75, 41, 0.502677);
   border-radius: 8px;
+  border:none;
 }
 .b1text{
   position: absolute;
@@ -828,6 +835,8 @@
   height: 16px;
   left: 230px;
   top: 7px;
+  border:none;
+  background:none;
   font-family: Open Sans;
   font-style: normal;
   font-weight: normal;
@@ -850,6 +859,8 @@
   height: 16px;
   left: 230px;
   top: 30px;
+  border:none;
+  background:none;
   font-family: Open Sans;
   font-style: normal;
   font-weight: bold;
@@ -886,6 +897,8 @@
   height: 16px;
   left: 230px;
   top: 55px;
+  border:none;
+  background:none;
   font-family: Open Sans;
   font-style: normal;
   font-weight: normal;
@@ -902,6 +915,7 @@
   top: 1200px;
   background: rgba(187, 75, 41, 0.502677);
   border-radius: 8px;
+  border:none;
 }
 
 /*CUSTOMISE*/
@@ -930,6 +944,7 @@
   width:25px;
   left: 10%;
   top:16%;
+  border:none;
 }
 .plus{
   position: absolute;
@@ -938,6 +953,7 @@
   height:20px;
   width:20px;
   text-decoration: none;
+  border:none;
 }
 .numbback{
   position: absolute;
