--- a/css/auth/otp.css
+++ b/css/auth/otp.css
@@ -168,6 +168,7 @@ box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.24), 0px 0px 2px rgba(0, 0, 0, 0.12), in
   border-bottom-left-radius: 16px;
   border-bottom-right-radius: 16px;
   overflow: hidden;
+  border:none;
 }
 .cont {
   width: 74px;
