--- a/css/auth/signup.css
+++ b/css/auth/signup.css
@@ -6,6 +6,7 @@
 }
 .phone {
   width: 86px;
+  height:20px;
   color: rgba(174,172,172,1);
   position: absolute;
   top: 266px;
@@ -136,6 +137,7 @@
 }
 .term {
  width: 328px;
+ height:50px;
  color: rgba(0,0,0,1);
  position: absolute;
  top: 550px;
